# sage-x-mcp-rust-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  README.md
.github/templates/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: OVERVIEW.md
docs/pt-br/: VISAO_GERAL.md
examples/: basic_usage.rs
scripts/: setup.ps1
src/: client.rs  error.rs  lib.rs  models.rs
src/mcp/: messages.rs  mod.rs  protocol.rs  transport.rs
tests/integration/: client_tests.rs
tests/performance/: benchmark_tests.rs
